refactor: rename new query parameter from 'asset' to 'root'
